Added socket.io, switched game controller classes to be controlled by server rather than client. Started game init cycle over websocket.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "War",
+  "name": "The classic card game War on React with Socket.IO",
   "icons": [
     {
       "src": "favicon.ico",
